# Label-smoothing-Selective-classification-Code

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/classification/cifar10/: readme.md  resnet.py  resnet20.ipynb
experiments/classification/cifar10/configs/: resnet20.yaml  resnet20_ls.yaml
experiments/classification/cifar100/: densenet.py  readme.md
experiments/classification/cifar100/configs/: densenet.yaml  densenet_ls.yaml
experiments/classification/imagenet/: readme.md  resnet.py  vit.py
experiments/classification/imagenet/configs/: resnet50.yaml  resnet50_ls.yaml  vit16s.yaml  vit16s_ls.yaml
experiments/nlp/: lstm.py  readme.md
experiments/nlp/configs/: lstm.yaml  lstm_ls.yaml
experiments/segmentation/: deeplab.py  readme.md
experiments/segmentation/configs/: deeplab.yaml  deeplab_ls.yaml
experiments/tabular/: bank_marketing.ipynb  online_shoppers.ipynb  readme.md
notebooks/: cifar100_aurc.ipynb  cityscapes_aurc.ipynb  imagenet_r50_aurc.ipynb  imagenet_vit_aurc.ipynb  imdb_aurc.ipynb  ranking_plot_segmentation.ipynb
torch_uncertainty_ls/: __init__.py  datamodule.py  dataset.py  densenet.py  loss.py  lstm_model.py  optim.py  sam_routine.py  torchtext.py  utils.py
