[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "torch_uncertainty_ls"
version = "0.0.1"
authors = [
    { name = "Guoxuan Xia", email = "g.xia21@imperial.ac.uk" },
    { name = "Olivier Laurent", email = "olivier.laurent@ensta-paris.fr" },
]
description = "Impact of label-smoothing on selective classification"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["selective-classification", "label-smoothing"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["torch_uncertainty[image]", "ipykernel", "datasets"]

[project.urls]
homepage = "https://torch-uncertainty.github.io/"
documentation = "https://torch-uncertainty.github.io/quickstart.html"
repository = "https://github.com/o-laurent/Label-smoothing-Selective-classification"

[tool.flit.module]
name = "torch_uncertainty_ls"

[tool.ruff]
line-length = 130
target-version = "py310"
lint.extend-select = [
    "A",
    "ARG",
    "B",
    "C4",
    "D",
    "ERA",
    "F",
    "G",
    "I",
    "ISC",
    "ICN",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RUF",
    "RSE",
    "S",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.ignore = [
    "ARG002",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D203",
    "D205",
    "D206",
    "D211",
    "D213",
    "D401",
    "ISC001",
    "N818",
    "N812",
    "RUF012",
    "S101",
    "TRY003",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]
